lib/src/compiler/tests/testdata/errors/108.out
error[E014]: invalid escape sequence
 --> line:2:17
  |
2 |   condition: "\xZZ" == "\xZZ"
  |                 ^^ invalid hex value `ZZ` after `\x`
  |